added sass, get to know style

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.0-rc.0",
     "babel-eslint": "^10.1.0",
     "babel-preset-nano-react-app": "^0.1.0",
     "eslint": "^7.32.0",
@@ -36,24 +37,21 @@
     "presets": [
       "nano-react-app"
     ],
-    "plugins":[
+    "plugins": [
       [
-      "@babel/plugin-proposal-class-properties",
-      {
-      "loose":true
-      },
-      "yt1"
+        "@babel/plugin-proposal-class-properties",
+        {
+          "loose": true
+        },
+        "yt1"
       ],
       [
-      "@babel/plugin-proposal-private-methods",
-      {
-      "loose":true
-      },
-      "yt2"
+        "@babel/plugin-proposal-private-methods",
+        {
+          "loose": true
+        },
+        "yt2"
       ]
-      ]
-     
-      
-      
+    ]
   }
 }
